Fix Editor Numbered List Alignment

--- a/SCSS/ITS Theme/_Lists - Bull & Num.scss
+++ b/SCSS/ITS Theme/_Lists - Bull & Num.scss
@@ -74,7 +74,7 @@ ul li > p { margin-block-end: unset; }
 
 /*Adjust Padding*/
 .cm-s-obsidian:not(.is-live-preview) span.cm-formatting-list-ol {
-    margin-left: -.2em;
+    margin-left: 1px;
 }
 .cm-s-obsidian.is-live-preview span.cm-formatting-list-ol {
     padding-left: 5px;
